# CompyPal

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  opencode.json  phase-check.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: companions.py  health.py
backend/app/graph/: __init__.py  appearance.py  companions.py  memories.py  relationships.py  schema.py  turns.py  users.py
backend/app/models/: chat.py  companion.py  memory.py
backend/app/services/: appearance.py  avatar.py  envcheck.py  llm.py  logging.py  persona.py  ratelimit.py  relationship.py  storage.py  stt.py  tts.py
backend/app/ws/: chat.py
backend/tests/: test_api_companions.py  test_appearance.py  test_health.py  test_persona.py  test_relationship.py
docs/: SPEC.md
ios/: Package.swift  project.yml
ios/Companion/: ExportOptions.plist  Info.plist
ios/Companion/App/: AuthViewModel.swift  CompanionApp.swift  ContentView.swift
ios/Companion/Core/: NetworkMonitor.swift
ios/Companion/Core/Audio/: AppleSpeechSTTEngine.swift  AudioPlayerService.swift  AudioRecorderService.swift  ElevenLabsTTS.swift  STTEngine.swift  TTSEngine.swift  VoicePicker.swift  WhisperSTTEngine.swift
ios/Companion/Core/LLM/: ModelTypes.swift
ios/Companion/Core/Memory/: DatabaseManager.swift  (+2 more)
ios/CompanionTests/: AvatarIntegrationTests.swift  AvatarTests.swift  CompanionTests.swift  MemoryStoreIntegrationTests.swift  ParametricSchemaTests.swift  PersonaAssemblerTests.swift  SelectionPolicyTests.swift
(+33 files in other folders)
